<resources>
    <string name="app_name">Password Manager</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Password manager</string>
    <string name="password_for">For</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="search_input">Search account</string>
    <string name="add_new_password">Add new password</string>
    <string name="error_message_for">Enter account name</string>
    <string name="error_message_username">Enter account username</string>
    <string name="error_message_pass">Enter account password</string>
    <string name="success_message_add">Account succesfully added</string>
    <string name="error_account_exists">Account already exists</string>
    <string name="sdd_password">Add password</string>
    <string name="hint_account">Account</string>
    <string name="hint_username">Username</string>
    <string name="sdd_password_back">Back to list</string>
</resources>
