<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_margin="4dp">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/password_for"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="3dp"
            android:text="@string/username"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="182dp"
            android:layout_marginLeft="182dp"
            android:layout_marginBottom="3dp"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>